fixed bug with Sound for all versions